# quick_borrow

./: .env-template  .flake8  .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
books/: admin.py  exceptions.py  filters.py  forms.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_initial.py  0003_rename_loan_date_bookloan_loan_datetime_and_more.py
books/templates/: base.html  book_detail.html  book_list.html
books/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
config/: asgi.py  silky_urls.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py  test.py
fixtures/: books.json  users.json
infrastructure/jenkins/: Dockerfile
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html
